Fix the spacing between the ratings

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -30,7 +30,8 @@ main {
         }
 
         &__ratings {
-            @include flexbox(auto, 50%, column, space-evenly);
+            @include flexbox(auto, 50%, column, center);
+            gap: 2vh;
         }
 
         &__rating {
